--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "type": "arikaim-extension",
     "license": "GPL-3.0-or-later",
     "authors": [{
-        "name": "",
+        "name": "Konstantin Atanasov",
         "email": "info@arikaim.com",
         "homepage": "http://arikaim.com"
     }],
